Compositor Split node factor 0 still shows the other image #115779

Closed
opened 2023-12-05 04:29:14 +01:00 by Sun Kim · 1 comment
Contributor

System Information
Operating system: Windows-10-10.0.19045-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17

Blender Version
Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-04 01:28, hash: 92e8b7e85027
Worked: ???

Probably a very old issue. I can confirm this in 2.83.

Short description of error
Compositor's Split view still shows the other image by 1 pixel width (or height) when its factor value is 0.

Note the green line at the left.

compositor_split_issue.png

compositor_split_issue_nodes.png

This happens for both X and Y axes. There are no issues with the factor of 99 or 100 as far as I can see.

Exact steps for others to reproduce the error

(For versions after the split view becoming a regular node with 153f14be2b)

  • In compositor add Split node
  • Connect the render image to one input, and a set visible color to the other
  • Set Factor to 0
  • Render (does not matter if compositor type is GPU, Full Frame, or Tiled), and see the rendered image

(For versions before the split view becoming a regular node)

  • Render
  • In compositor add Split Viewer node
  • Connect the render image to one input, and set a visible color to the other
  • Set Factor to 0
  • See the viewer image with image editor or background preview
**System Information** Operating system: Windows-10-10.0.19045-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 2060 SUPER/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 546.17 **Blender Version** Broken: version: 4.1.0 Alpha, branch: main, commit date: 2023-12-04 01:28, hash: `92e8b7e85027` Worked: ??? Probably a very old issue. I can confirm this in 2.83. **Short description of error** Compositor's Split view still shows the other image by 1 pixel width (or height) when its factor value is 0. Note the green line at the left. ![compositor_split_issue.png](/attachments/3c442d99-2877-44d2-9a70-433bcd00d0e0) ![compositor_split_issue_nodes.png](/attachments/811ad7ba-ea6c-4fef-9adc-27c5c14bc570) This happens for both X and Y axes. There are no issues with the factor of 99 or 100 as far as I can see. **Exact steps for others to reproduce the error** (For versions after the split view becoming a regular node with 153f14be2b) - In compositor add Split node - Connect the render image to one input, and a set visible color to the other - Set Factor to 0 - Render (does not matter if compositor type is GPU, Full Frame, or Tiled), and see the rendered image (For versions before the split view becoming a regular node) - Render - In compositor add Split Viewer node - Connect the render image to one input, and set a visible color to the other - Set Factor to 0 - See the viewer image with image editor or background preview
Sun Kim added the
Priority
Normal
Type
Report
Status
Needs Triage
labels 2023-12-05 04:29:15 +01:00
Iliya Katushenock added the
Interest
Compositing
Interest
Nodes & Physics
labels 2023-12-05 09:21:54 +01:00
Member

Can confirm

Can confirm
Philipp Oeser added
Status
Confirmed
Module
VFX & Video
and removed
Status
Needs Triage
labels 2023-12-05 10:26:23 +01:00
Habib Gahbiche self-assigned this 2023-12-06 12:16:39 +01:00
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-12-07 18:11:02 +01:00
Brecht Van Lommel added
Type
Bug
and removed
Type
Report
labels 2023-12-11 16:06:43 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#115779
No description provided.