Fix #115779: Compositor Split node factor 0 still shows the other image

At 0% split ratio, the result of the split node still shows the first row or the first column.

Pull Request: https://projects.blender.org/blender/blender/pulls/115844