source/blender/compositor/realtime_compositor/shaders/compositor_split.glsl
@@ -9,9 +9,9 @@ void main()
   ivec2 texel = ivec2(gl_GlobalInvocationID.xy);
   ivec2 output_size = imageSize(output_img);
 #if defined(SPLIT_HORIZONTAL)
-  bool condition = (output_size.x * split_ratio) < texel.x;
+  bool condition = (output_size.x * split_ratio) <= texel.x;
 #elif defined(SPLIT_VERTICAL)
-  bool condition = (output_size.y * split_ratio) < texel.y;
+  bool condition = (output_size.y * split_ratio) <= texel.y;
 #endif
   vec4 color = condition ? texture_load(first_image_tx, texel) :
                            texture_load(second_image_tx, texel);
